infra/k8s/micro-auth-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-auth-mongo
  template:
    metadata:
      labels:
        app: micro-auth-mongo
    spec:
      containers:
        - name: micro-auth-mongo
          image: mongo

---
apiVersion: v1
kind: Service
metadata:
  name: micro-auth-mongo-srv
spec:
  selector:
    app: micro-auth-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
