infra/k8s/micro-orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-orders
  template:
    metadata:
      labels:
        app: micro-orders
    spec:
      containers:
        - name: micro-orders
          image: us.gcr.io/ticketing-dev-407521/micro-orders
---
apiVersion: v1
kind: Service
metadata:
  name: micro-orders-srv
spec:
  selector:
    app: micro-orders
  ports: 
    - name: micro-orders
      protocol: TCP
      port: 3000
      targetPort: 3000
