infra/k8s/micro-tickets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-tickets
  template:
    metadata:
      labels:
        app: micro-tickets
    spec:
      containers:
        - name: micro-tickets
          image: us.gcr.io/ticketing-dev-407521/micro-tickets
---
apiVersion: v1
kind: Service
metadata:
  name: micro-tickets-srv
spec:
  selector:
    app: micro-tickets
  ports: 
    - name: micro-tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
